--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,12 @@
             </div>
             <nav class="nav-links">
                 <a href="/">Inicio</a>
-                <a href="/errors">Errores</a>
-                <a href="/docs?type=guia">Guías</a>
-                <a href="/docs?type=buenas-practicas">Buenas prácticas</a>
-                <a href="/docs?type=faq">FAQ</a>
-                <a href="/docs?type=novedad">Novedades</a>
+                <!-- Enlaces directos a cada tipo de documento.  -->
+                <a href="/docs/error">Errores</a>
+                <a href="/docs/guia">Guías</a>
+                <a href="/docs/comportamiento">Buenas prácticas</a>
+                <a href="/docs/faq">FAQ</a>
+                <a href="/docs/novedad">Novedades</a>
                 <a href="/categories">Categorías</a>
                 <a href="/admin">Gestión</a>
             </nav>
