--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+{% block hero %}
 <!-- HERO HEADER NEGRO -->
 <header class="hero-header">
   <h1>Centro de Ayuda Tecopos</h1>
@@ -20,6 +21,7 @@
     </form>
   </div>
 </header>
+{% endblock %}
 
 
 
